# women-artist-discovery

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  conftest.py  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md  allowed_signers
.github/workflows/: ci.yml  codeql.yml  mutation.yml  osv-scanner.yml  release.yml  scorecard.yml  trufflehog.yml  zizmor.yml
app/: __init__.py  a11y_check.py  build_static.py  dashboard.py  render.py
docs/: DOCUMENTATION-AUDIT.md  I18N.md  PROJECT-SCOPE.md  README.md  RESEARCH-ROADMAP.md  RESPONSIBLE-TECH-AUDITS.md  ROADMAP.md  USER-RESEARCH.md
docs/adr/: 0000-record-architecture-decisions.md  0001-single-maintainer-review-posture.md  0002-python-floor-3.10-not-3.12.md  0003-hatchling-build-backend.md  0004-python-floor-3.12.md  0005-streamlit-over-react.md  0006-hybrid-recommender-over-single-method.md  0007-sourced-only-identity-unknown-first-class.md  0008-cache-and-rate-limit-respect.md  0009-flat-package-layout-not-src.md  0010-release-producing-repository.md
docs/audits/: accessibility-2026-05-31.md  accessibility-2026-07-09.md  accessibility-2026-07-17.md  ai-risk-register.md  branch-ruleset.json  coverage.xml  dashboard.html  data-card.md  eval-baseline.json  eval-report.json  fairness-identity.md  identity-data-ethics.md  model-card.md  privacy-notes.md  residual-risk.md  vex.json
docs/ideation/: 01-deep-dive.md  02-large-scale-fixes.md  03-expansions.md  04-impact-and-sequencing.md  README.md
docs/writeup/: methods.md
export/: __init__.py  listenbrainz.py  models.py  registry.py  spotify.py  tracklist.py  transport.py
pipeline/: __init__.py  cache.py  cli.py  corrections.py  demo.py  doctor.py  enrich.py  fixtures.py  identity.py  ingest.py  lastfm.py  logconfig.py  models.py  paths.py  serde.py
recommender/: __init__.py  collaborative.py  content.py  coverage.py  diversify.py  eval.py  explain.py  exposure.py  feedback.py  hybrid.py  lens.py  rerank.py  upstream.py  why.py
scripts/: bench.py  check-staleness.sh  i18n-gate.sh  mutation-gate.sh  secret-scan.sh  writeup-check.py
scripts/mutation/: identity.toml  rerank.toml
tests/: conftest.py  test_a11y.py  test_adapters.py  test_cache_lifecycle.py  test_cache_serde.py  test_contrast.py  test_corrections.py  test_coverage_readout.py  test_diversify.py  test_doctor.py  test_e2e_a11y.py  test_egress_allowlist.py  test_eval.py  test_eval_worlds.py  test_explanation.py  test_export.py  test_export_schema.py  test_exposure.py  test_feedback.py  test_fixtures.py  test_identity_model.py  test_ingest.py  test_lens.py  test_listenbrainz.py  test_log_privacy.py  test_logconfig.py  test_models.py  test_no_inference.py  test_observability.py  test_paths.py  test_pending_corrections.py  test_privacy.py  test_properties.py  test_provenance.py  test_report.py  test_reproducibility.py  test_rerank.py  test_temporal_profile.py  test_unknown_first_class.py  test_upstream.py  (+1 more)
