[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "women-artist-discovery"
version = "0.1.0"
description = "A values-aware music-discovery engine with a sourced-not-inferred identity model."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Chelsea" }]
dependencies = [
    "requests>=2.31",
    "numpy>=1.26",
]

[project.optional-dependencies]
app = ["streamlit>=1.36", "pandas>=2.0"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
    "pip-audit>=2.7",
]

[project.scripts]
wad = "pipeline.cli:main"

[tool.setuptools]
packages = ["pipeline", "recommender", "app"]

[tool.setuptools.package-data]
pipeline = ["py.typed"]
recommender = ["py.typed"]

# ---------------------------------------------------------------------------
# Lint / format gate (QUALITY-AND-METRICS-STANDARD §7, CI stage 1)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["pipeline", "recommender", "app", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, simplify,
# and flake8-print (no stray prints) — flake8-bandit (S) for light SAST.
select = ["E", "F", "I", "B", "C4", "UP", "SIM", "T20", "S"]
# S101: assert is allowed in tests (scoped per-file below).
# UP045: this codebase targets Python 3.9 and uses explicit `Optional[...]`.
ignore = ["S101", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # asserts and dummy secrets in fixtures
"app/*" = ["T20"]                     # streamlit uses st.write, not print; harmless

# ---------------------------------------------------------------------------
# Type-check gate (CI stage 2) — strict.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
files = ["pipeline", "recommender", "app"]

[[tool.mypy.overrides]]
# Third-party libs without stubs — don't fail strict on them.
module = ["streamlit.*", "pandas.*", "numpy.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Test + coverage gate (CI stage 3)
# Coverage is measured on CORE LOGIC (pipeline + recommender), per the
# standard's "≥85% lines / ≥80% branches on core logic". The Streamlit UI
# and live-HTTP code paths are integration/manual-verified, not unit-gated.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--cov=pipeline",
    "--cov=recommender",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml:docs/audits/coverage.xml",
    "--cov-fail-under=85",
    "-ra",
]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning:pipeline.*", "error::DeprecationWarning:recommender.*"]

[tool.coverage.run]
branch = true
omit = [
    "app/*",                 # Streamlit UI — verified via a11y + manual walkthrough
    "pipeline/cli.py",       # thin argparse glue
]

[tool.coverage.report]
# Branch target is enforced via the line gate plus these exclusions for the
# genuinely untestable live-network glue (parsers are tested via fixtures).
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
