[build-system]
# hatchling, not setuptools (CQ-10): a real `uv build`/`python -m build` wheel is
# part of the planned tag-triggered release workflow (release.yml).
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "women-artist-discovery"
version = "0.1.0"
description = "A values-aware music-discovery engine with a sourced-not-inferred identity model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chelsea" }]
dependencies = [
    # requests>=2.33 / urllib3>=2.7 carry the fixes for the former RR-4 network-path
    # advisories (GHSA-gc5v-m9x4-r6x2, PYSEC-2026-141/142) — installable now that the
    # floor is >=3.10. urllib3 is pinned reproducibly via uv.lock.
    "requests>=2.33",
]

[project.optional-dependencies]
# streamlit>=1.54 pulls fixed pillow>=12.2 / pyarrow>=23 / msgpack>=1.2.1 / tornado,
# clearing the former RR-4 app-extra advisory cluster (3.10+-gated fixes).
# Kept as a real runtime extra (PEP 735 dependency-groups is for dev-only tooling, not
# installable extras) — `dev` moved to [dependency-groups] below (CQ-27).
app = ["streamlit>=1.54", "pandas>=2.0"]

[project.scripts]
wad = "pipeline.cli:main"

# ---------------------------------------------------------------------------
# PEP 735 dependency groups (CQ-27) — dev-only tooling, not an installable extra.
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    # pytest>=9.0.3 carries the fix for GHSA-6w46-j5rx-g56g (former RR-4 dev-only).
    "pytest>=9.0.3",
    "pytest-cov>=6",
    # CODE-QUALITY-STANDARD.md:109 named ruff>=0.6/mypy>=1.11 as mandatory tracked drift;
    # floors raised to match the versions this repo actually lints/type-checks with.
    "ruff>=0.15",
    "mypy>=1.18",
    "types-requests",
    "pip-audit>=2.7",
    # Property-based guardrail tests (FIX-11) exercise generated inputs.
    "hypothesis>=6",
]
# Browser-driven a11y specs (A11Y-02/07/08/09): keyboard reachability, 320 px
# reflow, and reduced-motion, run against the static render in a real browser.
# Split from `dev` so the plain unit-test environment stays browser-free; the
# specs auto-skip when no Chrome/Chromium is reachable (CI sets
# WAD_E2E_REQUIRE=1 so a missing browser fails there instead of skipping).
e2e = ["playwright>=1.55"]

[tool.hatch.build.targets.wheel]
packages = ["pipeline", "recommender", "app", "export"]
# py.typed markers ship automatically — hatchling includes every tracked file
# under an included package directory, no separate package-data list needed.

# ---------------------------------------------------------------------------
# Lint / format gate (QUALITY-AND-METRICS-STANDARD §7, CI stage 1)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["pipeline", "recommender", "app", "tests"]

[tool.ruff.lint]
# pycodestyle (+ warnings), pyflakes, isort, bugbear, comprehensions, pyupgrade,
# simplify, flake8-print (no stray prints), flake8-bandit (S) for light SAST,
# mccabe complexity (C90), and ruff's own extra rules (RUF).
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "T20", "S", "C90", "RUF"]
# S101: assert is allowed in tests (scoped per-file below).
# UP045: codebase uses explicit `Optional[...]`; not auto-rewritten to `X | None`
# in this migration (keeps the diff to the version/floor changes).
ignore = ["S101", "UP045"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # asserts and dummy secrets in fixtures
"app/*" = ["T20"]                     # streamlit uses st.write, not print; harmless
"scripts/writeup-check.py" = ["T20"]  # CLI checker reports via stdout/stderr

# ---------------------------------------------------------------------------
# Type-check gate (CI stage 2) — strict.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
files = ["pipeline", "recommender", "app", "export"]

[[tool.mypy.overrides]]
# streamlit is the only directly-imported third-party UI lib (app/dashboard.py).
# Its bundled stubs (and the pandas/numpy stubs they pull in) use PEP 695 `type`
# aliases that require a >=3.12 mypy target; we type-check our own code against
# py310, so skip following streamlit rather than raise the project's target.
module = ["streamlit.*"]
ignore_missing_imports = true
follow_imports = "skip"

# ---------------------------------------------------------------------------
# Test + coverage gate (CI stage 3)
# Coverage is measured on CORE LOGIC (pipeline + recommender), per the
# standard's "≥85% lines / ≥80% branches on core logic". The Streamlit UI
# and live-HTTP code paths are integration/manual-verified, not unit-gated.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = [
    "--cov=pipeline",
    "--cov=recommender",
    "--cov=export",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml:docs/audits/coverage.xml",
    "--cov-fail-under=85",
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
]
testpaths = ["tests"]
markers = [
    # Browser-driven a11y specs (tests/test_e2e_a11y.py). They need a real
    # Chrome/Chromium and auto-skip when none is reachable; setting
    # WAD_E2E_REQUIRE=1 (as CI does) turns that skip into a hard failure so the
    # server-side gate cannot silently weaken.
    "e2e: browser-driven accessibility spec (Playwright + Chrome/Chromium)",
]
filterwarnings = ["error::DeprecationWarning:pipeline.*", "error::DeprecationWarning:recommender.*"]

[tool.coverage.run]
branch = true
omit = [
    "app/*",                 # Streamlit UI — verified via a11y + manual walkthrough
    "pipeline/cli.py",       # thin argparse glue
]

[tool.coverage.report]
# Branch target is enforced via the line gate plus these exclusions for the
# genuinely untestable live-network glue (parsers are tested via fixtures).
# pipeline/identity.py (the identity resolver) additionally carries a per-module
# >=95% floor via the scoped `coverage report --include=... --fail-under=95` step
# in `make test` and CI (CODE-QUALITY-STANDARD, per-module floors).
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
